RESOLVED FIXED199905
REGRESSION: Panning on an Amazon product image scrolls the page on iPadOS
https://bugs.webkit.org/show_bug.cgi?id=199905
Summary REGRESSION: Panning on an Amazon product image scrolls the page on iPadOS
Antoine Quint
Reported 2019-07-18 06:36:29 PDT
REGRESSION: Panning on an Amazon product image scrolls the page on iPadOS
Attachments
Patch (4.60 KB, patch)
2019-07-18 06:39 PDT, Antoine Quint
no flags
Patch (4.85 KB, patch)
2019-07-18 06:56 PDT, Antoine Quint
dino: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews114 for mac-highsierra (3.05 MB, application/zip)
2019-07-18 08:47 PDT, EWS Watchlist
no flags
Antoine Quint
Comment 1 2019-07-18 06:39:10 PDT
Antoine Quint
Comment 2 2019-07-18 06:39:15 PDT
Antoine Quint
Comment 3 2019-07-18 06:56:04 PDT
EWS Watchlist
Comment 4 2019-07-18 08:47:27 PDT
Comment on attachment 374382 [details] Patch Attachment 374382 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/12766255 New failing tests: storage/indexeddb/dont-wedge.html
EWS Watchlist
Comment 5 2019-07-18 08:47:29 PDT
Created attachment 374388 [details] Archive of layout-test-results from ews114 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-highsierra Platform: Mac OS X 10.13.6
Dean Jackson
Comment 6 2019-07-18 11:55:33 PDT
Comment on attachment 374382 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=374382&action=review > Source/WebCore/page/Quirks.cpp:283 > + if (isAmazon() && is<Element>(target)) { Do you need to check target is not null?
Antoine Quint
Comment 7 2019-07-18 11:57:45 PDT
Chris Dumez
Comment 8 2019-07-18 11:58:47 PDT
Comment on attachment 374382 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=374382&action=review >> Source/WebCore/page/Quirks.cpp:283 >> + if (isAmazon() && is<Element>(target)) { > > Do you need to check target is not null? No, is<>() does does when you pass it a raw pointer. > Source/WebCore/page/Quirks.cpp:286 > + auto* element = downcast<Element>(target); Could be: auto& element = downcast<Element>(*target);
Note You need to log in before you can comment on or make changes to this bug.